# kgl

./: CMakeLists.txt  README.md
include/kgl/: error.h  gl_includes.h  input.h  renderer.h  shaders.h  texture.h  utils.h
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: CMakeLists.txt  error.c  input.c  renderer.c  shaders.c  texture.c  utils.c
src/shaders/: default.frag  default.vert  passthrough.frag  passthrough.vert
test/: CMakeLists.txt  main.c
